Fix wrong link size on mobile

--- a/style-tpl.css
+++ b/style-tpl.css
@@ -56,9 +56,8 @@ a {
 	text-decoration: none;
 	display: inline-block;
 	color: black;
-	margin: 0 5px;
 	font-size: 16pt;
-	transition: color ease 0.15s;
+	transition: color ease 0.12s;
 
 	&::after {
 		content: '';
@@ -69,7 +68,7 @@ a {
 		left: 0;
 		bottom: 0;
 		background-color: #ffd900bb;
-		transition: all ease 0.15s;
+		transition: all ease 0.12s;
 	}
 
 	&:hover {
@@ -84,10 +83,9 @@ a {
 @media screen and (max-width: 950px) {
 	nav {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
-		font-size: 14pt;
 	}
 
-	p {
+	p, a, nav {
 		font-size: 14pt;
 	}
 
